# bill_forge

./: .dockerignore  .env.example  .gitignore  .locust.yaml  CHANGELOG.md  CLAUDE.md  POLISH_PLAN.md  PRODUCT_STRATEGY.md  README.md  SPRINT_PLAN.md  agent-deepseek-output.txt  agent-loop.sh  docker-compose.prod.yml  docker-compose.scaling.yml  docker-compose.yml  dream-board-backup-20260129-1406.md  dream-board-backup-20260129-1439.md  dream-board.md  env.example  env.production.example  features-backup-20260129-1522.md  features-backup-20260129-2347.md  features.md  feedback.jsonl  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  progress-20260129-1413.md  progress-report-20260129-1406.md  sprint_13_feature_plan.md  vision.yaml
backend/: Cargo.toml  Dockerfile.worker  demo_predictive.sh  landing.html  seed_test_data.sh  simple_seed.sh  test_predictive.sh
backend/.sqlx/: query-08e526acb4bc7c3901a367057f697ed7ce63084474f2fdab7bbd10242c129b72.json  query-102a84eaa8f068f9e4186a3129de2aeb7bb7b5a2da83540ae1dae2e0b2a1f86b.json  query-12d158b80af83d4ee0b92acfcf553d60445509ebc2ec76a82a76fcc121b03264.json  query-3041532a26db15a4102eae16aa6035c74cacd6f21325738305fb96f162ed4e09.json  query-31bfd8a605b1538edf4a92ce27ed4435b07804e87780bb65804a317c20bf1d94.json  query-38fe4df10eddc2e3d7936e2c7e537f348130906d8359780ddc7040572926bb38.json  query-3a68d3c5e695b21368ef09423589c801e556c651a58a6e35ac2340758bc73713.json  query-49d452849e1c33a11921cbee89db491b8cf852c459154b84e13ff789710c4cd4.json  query-54ebcbb57e310db4a0ab734496b315007040b34dd254bb6e4444e34581ec9ccb.json  query-6971861c2d86266ea04e468c281cd6c36ed178b70d9319b618f41b5560e3db36.json  query-6d1b02dd2dcceed267b363f5b6365b7c8096d018d79a8d96dafd0100849a6074.json  query-727417a0463c8d4c611354054edda126d15f8bbb3f6b0d114d561ec5a7e8ddf8.json  query-79a8df5dfa15a142692d07f8fbb9a208f29993bcc49cbb2db431407befb79f0f.json  query-7d48ed25ef7135bb8578fc2dd4ef865c2d8c5e49ff0b72d521fe5851c9440e72.json  query-82370fb3973fced3b3d4f6e174eceaf107dd0bbc98c1d02825455f7b98464739.json  query-8253c3e9e06955f1cb68f311b251af228e58a6b4ffa6c3d4364ed2835be58667.json  query-8750f90aaef1d0cf4543a12190c4a667798729703f66e4a952cd3aeac9ef598e.json  query-8dd6a0f00075af630b7231f5d09061f4672c5c43cc8a54aaa63b2091f0c48143.json  query-9dbb9882198b58fa8645496bfa5491fd44b33077585e6a7d0b10efe8604028b7.json  query-9dcc600c55fe0ac632b264d3733900822670bc3d046b993a560a649dc2795787.json  query-9fe5cb1b603b6b901d73dabb404120060236ca2f3bb93a53f251de38c9a6d186.json  query-a501df05e28c6f441cd571f63c5ef0acd07fc0ecfeea4612e550d46e4a5d3b5c.json  query-b640e5515ff4e6ed332ecbe5a1edd3056fbb999aabbced10fdd4ab47d0aae594.json  query-bdfc739669fecf5c39526d4fc460bdf49439070ffdc8e6bcd2aed6a6982f722c.json  query-c8f2feff3f28de0eb31bed830065ca035e2fcde77a3bc4130fc7ea689b7439a4.json  query-d0f45e3df6dafa38f848614a448b51f54f70974d3272235d00f5138facc2d4a0.json  query-d778b403a08ffa1553b08173e1f83895c2101d3413d59e0cfe71d41fb79e87ca.json  query-da78b438ec5689bbbbb31837e0b9fa916f0d15ddaf830bd4a34be7f17e350869.json  query-dc3a200d8875ea89b6af99df1ec22d5f07436d5bc811e155d53e7569c7ee2987.json  query-df9f2f8b61cf389ca8f0104a099ee0cfe87f6c9d66623cfbbc6afe53f75cc2da.json  query-e11fe52c8d9618ed906341045051199f85488aaf65dd5cf052e776de1d86dfbc.json  query-f6c0fd1ce59b5d8d22254e7e71e6e8557c36209a985fdb5519d128aea517efe0.json  query-fdacff7da95ab9e71435718ab58054e015edaaf8b416564189d499bf8d079a19.json  query-fe03bd1dac64a5a8de6a7b7773921011c9fc5e07dbd3193a2abd7020ed5a373d.json  query-fec9de32e79d046c55c8cd434ef2ae3d8ab51c4bed8751461ecc658907e00a03.json
backend/crates/ai-agent/: Cargo.toml
backend/crates/analytics/: Cargo.toml
backend/crates/api/: Cargo.toml
backend/crates/approval-engine/: Cargo.toml
backend/crates/auth/: Cargo.toml
backend/crates/bill-com/: Cargo.toml
backend/crates/billing/: Cargo.toml
backend/crates/core/: Cargo.toml
backend/crates/db/: Cargo.toml
backend/crates/edi/: Cargo.toml
backend/crates/email/: Cargo.toml
backend/crates/feedback/: Cargo.toml
backend/crates/health/: Cargo.toml
backend/crates/invoice-capture/: Cargo.toml
backend/crates/invoice-processing/: Cargo.toml
backend/crates/mobile-push/: Cargo.toml
backend/crates/netsuite/: Cargo.toml
backend/crates/notifications/: Cargo.toml
backend/crates/ocr-pipeline/: Cargo.toml
backend/data/: ofac_sdn_seed.json
backend/docs/: sprint13_intelligent_routing.md  sprint13_notifications.md  sprint13_predictive_analytics.md  sprint14_enhanced_ocr.md
backend/examples/: hash_password.rs
backend/migrations/: 001_create_tenants.sql  002_create_users.sql  003_create_vendors.sql  004_create_invoices.sql  005_create_workflow_tables.sql  006_create_quickbooks_tables.sql  007_create_vendor_documents.sql  008_create_vendor_contacts.sql  009_create_email_notifications.sql  010_create_report_digests.sql  047_create_category_suggestions.sql  048_add_categorization_ml.sql  049_add_categorization_confidence.sql  050_create_xero_tables.sql  051_add_intelligent_routing.sql  052_add_notifications.sql  053_add_predictive_analytics.sql  054_create_mobile_push_tables.sql  055_add_sync_metadata.sql  056_fix_tenant_id_types.sql  057_create_workflow_templates.sql  058_create_invoice_status_config.sql  059_create_approval_limits.sql  060_create_sage_intacct_tables.sql  061_create_salesforce_tables.sql  062_create_workday_tables.sql  063_create_bill_com_tables.sql  064_create_edi_receiver_map.sql  064_create_ocr_pipeline_tables.sql  065_create_approval_chain_tables.sql  065_create_purchase_orders.sql  066_edi_outbound_ack_tracking.sql  067_create_edi_webhook_nonces.sql  068_create_vendor_statements.sql  069_create_payment_requests.sql  070_add_integration_webhook_support.sql  071_add_core_tenant_fk_constraints.sql  072_add_feedback_correction_rules.sql  073_create_tenant_subscriptions.sql  074_add_vendor_sync_columns.sql  (+81 more)
backend/scripts/: check-modular-builds.sh
backend/tests/: advanced_reporting_test.rs  categorization_test.rs  discount_worklist_integration.rs  report_digest_test.rs
(+918 files in other folders)
