[package]
name = "billforge-ai-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

# AI/LLM dependencies
async-openai = "0.20"
reqwest = { version = "0.12", default-features = false }
tiktoken-rs = "0.5"

# Internal crates
billforge-core = { path = "../core" }
billforge-db = { path = "../db" }
billforge-auth = { path = "../auth" }
