[package]
name = "billforge-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "billforge-server"
path = "src/main.rs"

[dependencies]
billforge-core = { path = "../core" }
billforge-db = { path = "../db" }
billforge-auth = { path = "../auth" }
billforge-email = { path = "../email" }
billforge-billing = { path = "../billing" }
billforge-ai-agent = { path = "../ai-agent" }
billforge-invoice-capture = { path = "../invoice-capture" }
billforge-invoice-processing = { path = "../invoice-processing" }
billforge-vendor-mgmt = { path = "../vendor-mgmt" }
billforge-reporting = { path = "../reporting" }
billforge-quickbooks = { path = "../quickbooks", optional = true }
billforge-xero = { path = "../xero", optional = true }
billforge-sage-intacct = { path = "../sage-intacct", optional = true }
billforge-salesforce = { path = "../salesforce", optional = true }
billforge-workday = { path = "../workday", optional = true }
billforge-bill-com = { path = "../bill-com", optional = true }
billforge-edi = { path = "../edi", optional = true }
billforge-notifications = { path = "../notifications" }
billforge-mobile-push = { path = "../mobile-push" }
billforge-analytics = { path = "../analytics" }

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit"] }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database (for seeding)
sqlx = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
validator = { workspace = true }
sha2 = "0.10"
hex = "0.4"

# Redis job queue (for enqueuing OCR jobs)
redis = { version = "0.24", features = ["tokio-comp"] }

# Validation
regex = "1.10"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

[features]
default = ["quickbooks", "xero", "sage-intacct", "salesforce", "workday", "bill-com", "edi"]
quickbooks = ["dep:billforge-quickbooks"]
xero = ["dep:billforge-xero"]
sage-intacct = ["dep:billforge-sage-intacct"]
salesforce = ["dep:billforge-salesforce"]
workday = ["dep:billforge-workday"]
bill-com = ["dep:billforge-bill-com"]
edi = ["dep:billforge-edi"]

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { workspace = true }
