[package]
name = "billforge-billing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
billforge-core = { path = "../core" }
billforge-db = { path = "../db" }
sqlx = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client for Stripe API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Cryptographic verification for webhook signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2.5"

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
integration = []

[dev-dependencies]
tokio-test = "0.4"
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
wiremock = "0.6"
