[package]
name = "billforge-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[[bin]]
name = "rollback"
path = "src/bin/rollback.rs"

[features]
default = []
s3 = ["aws-sdk-s3", "aws-config"]

[dependencies]
billforge-core = { path = "../core" }

# Database - PostgreSQL with sqlx for async, compile-time checked queries
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "chrono", "uuid", "migrate", "json"] }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
dotenv = "0.15"

# AWS S3 (optional - for production deployments)
aws-sdk-s3 = { version = "1.15", optional = true }
aws-config = { version = "1.1", optional = true }

[dev-dependencies]
tempfile = "3.9"
dotenv = "0.15"
