[package]
name = "billforge-email"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
billforge-core = { path = "../core" }

# HTTP client for webhook-based email (Sendgrid, Mailgun, etc.)
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
