[package]
name = "billforge-email"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
billforge-core = { path = "../core" }

# HTTP client for webhook-based email (Sendgrid, Mailgun, etc.)
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database (for inbound email persistence)
sqlx = { workspace = true }

# Encoding (base64 attachment decoding)
base64 = "0.22"

# Date/time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Redis (for OCR job enqueue from inbound handler)
redis = { version = "0.24", features = ["tokio-comp"], optional = true }

[features]
default = []
inbound-redis = ["dep:redis"]

[dev-dependencies]
wiremock = "0.6"
