[package]
name = "billforge-invoice-processing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
billforge-core = { path = "../core" }
billforge-db = { path = "../db" }
billforge-invoice-capture = { path = "../invoice-capture" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
sha2 = "0.10"

# ML Categorization dependencies (Sprint 13)
async-openai = { version = "0.20", default-features = false, features = ["native-tls"] }

[[test]]
name = "line_categorization_test"
path = "tests/line_categorization_test.rs"

[[test]]
name = "continuous_learning_test"
path = "tests/continuous_learning_test.rs"
