[package]
name = "billforge-notifications"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
tracing = { workspace = true }
billforge-core = { path = "../core" }
urlencoding = "2.1"

[dev-dependencies]
tokio = { workspace = true }
mockall = { workspace = true }
