[package]
name = "billforge-notifications"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.8"
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
tracing = { workspace = true }
billforge-core = { path = "../core" }
billforge-mobile-push = { path = "../mobile-push" }
urlencoding = "2.1"

[dev-dependencies]
tokio = { workspace = true }
mockall = { workspace = true }
