[package]
name = "billforge-reporting"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
billforge-core = { path = "../core" }
billforge-db = { path = "../db" }

# Database
rusqlite = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
