[package]
name = "billforge-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "billforge-worker"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "bigdecimal"] }

# Redis job queue
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Number traits for BigDecimal conversions
num-traits = "0.2"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# BillForge crates
billforge-core = { path = "../core" }
billforge-db = { path = "../db" }
billforge-quickbooks = { path = "../quickbooks" }
billforge-xero = { path = "../xero" }
billforge-sage-intacct = { path = "../sage-intacct" }
billforge-salesforce = { path = "../salesforce" }
billforge-workday = { path = "../workday" }
billforge-bill-com = { path = "../bill-com" }
billforge-netsuite = { path = "../netsuite" }
billforge-email = { path = "../email" }
billforge-reporting = { path = "../reporting" }
billforge-invoice-processing = { path = "../invoice-processing" }
billforge-analytics = { path = "../analytics" }
billforge-invoice-capture = { path = "../invoice-capture" }
billforge-vendor-mgmt = { path = "../vendor-mgmt" }
billforge-edi = { path = "../edi" }

# Vendor risk rescan: deterministic payload hashing for alert idempotency
sha2 = "0.10"
hex = "0.4"

# Metrics
prometheus = { version = "0.13", default-features = false }
lazy_static = "1.4"
